[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "Find the `DW_AT_producer` values for all compilation units within an shared library or executable."
license = "Apache-2.0/MIT"
name = "dwprod"
version = "0.1.0"
[[bin]]
doc = false
name = "dwprod"
path = "src/bin/dwprod.rs"
required-features = ["exe"]

[dependencies]
fallible-iterator = "0.1.3"
gimli = "0.14.0"
object = "0.4.1"

[dependencies.clap]
optional = true
version = "2.26.2"

[features]
default = ["exe"]
exe = ["clap"]
