[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools::debugging"]
description = "Find the `DW_AT_producer` values for all compilation units within a shared library or executable."
keywords = ["producer", "dwarf", "DW_AT_producer", "compiler", "debug"]
license = "Apache-2.0/MIT"
name = "dwprod"
readme = "./README.md"
repository = "https://github.com/fitzgen/dwprod"
version = "0.1.0"

[[bin]]
doc = false
name = "dwprod"
path = "src/bin/dwprod.rs"
required-features = ["exe"]

[dependencies]
fallible-iterator = "0.1.3"
gimli = "0.14.0"
object = "0.4.1"

[dependencies.clap]
optional = true
version = "2.26.2"

[features]
default = ["exe"]

# When enabled, build the `dwprod` command line executable. When disabled, the
# executable is not built, `clap` is not depended upon, and this crate can be
# used purely as a library.
exe = ["clap"]

[profile.release]
# Ensure that we emit debug info even in release builds. The tests rely on it.
debug = true
